--- a/.github/workflows/deploy-lambda.yaml
+++ b/.github/workflows/deploy-lambda.yaml
@@ -37,6 +37,6 @@ jobs:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ secrets.AWS_REGION }}
-          handler: handler.handler
-          function_name: binance_trades
+          handler: ${{ inputs.handler }}
+          function_name: ${{ inputs.function_name }}
           zip_file: deploy.zip
