--- a/.github/workflows/deploy-lambda.yaml
+++ b/.github/workflows/deploy-lambda.yaml
@@ -34,9 +34,8 @@ jobs:
 
       - name: Zip code
         run: |
-          cp ./handler.py ./package
-          cp ./src ./package
-          cd ./package
+          cp -r handler.py src /package
+          cd /package
           zip -r ../deploy.zip .
           cd ..
 
