--- a/.github/workflows/deploy-lambda.yaml
+++ b/.github/workflows/deploy-lambda.yaml
@@ -30,13 +30,13 @@ jobs:
       - name: Package dependencies
         run: |
           mkdir package
-          pip install -r requirements.txt --target ./package
+          pip install --no-cache-dir --no-compile --target ./package -r requirements.txt
 
       - name: Zip code
         run: |
           cp -r handler.py src ./package
           cd ./package
-          zip -r ../deploy.zip .
+          zip -r9 --exclude='*.pyc' --exclude='__pycache__/*' ../deploy.zip .
           cd ..
 
       - name: Deploy
