--- a/.github/workflows/deploy-lambda.yaml
+++ b/.github/workflows/deploy-lambda.yaml
@@ -38,6 +38,8 @@ jobs:
           cd ./package
           zip -r9 --exclude='*.pyc' --exclude='__pycache__/*' ../deploy.zip .
           cd ..
+          file_size=$(ls -lh deploy.zip | awk '{print $5}')
+          echo "The deploy package size is $file_size"
 
       - name: Deploy
         uses: appleboy/lambda-action@v0.1.9
